# fea_app

./: .gitignore  README.md  build.sh  commands.txt  deploy.yml  docker-compose.yaml  inventory.ini  nginx.conf
frontend/fea_service/wasm_modules/: Cargo.toml  build.sh  build_wasm.sh
frontend/fea_service/wasm_modules/actions_router/: Cargo.toml
frontend/fea_service/wasm_modules/actions_router/src/: action.rs  functions.rs  methods_for_boundary_condition_type_actions_handle.rs  methods_for_geometry_type_actions_handle.rs  methods_for_loads_type_actions_handle.rs  methods_for_mesh_seed_type_actions_handle.rs  methods_for_properties_type_actions_handle.rs  types.rs
frontend/fea_service/wasm_modules/crates/actions_router/: Cargo.toml
frontend/fea_service/wasm_modules/crates/actions_router/src/: functions.rs  lib.rs  methods_for_boundary_condition_type_actions_handle.rs  methods_for_geometry_type_actions_handle.rs  methods_for_loads_type_actions_handle.rs  props.rs
frontend/fea_service/wasm_modules/crates/mesher/: Cargo.toml
frontend/fea_service/wasm_modules/crates/mesher/src/: lib.rs  methods_for_beam_elements_data_handle.rs  methods_for_concentrated_loads_data_handle.rs  methods_for_edges_data_handle.rs  methods_for_truss_elements_data_handle.rs  methods_for_uniformly_distributed_loads_on_beams_data_handle.rs  methods_for_uniformly_distributed_loads_on_plates_data_handle.rs
frontend/fea_service/wasm_modules/crates/mesher/src/enums/: bc_type.rs  direction.rs  mod.rs
frontend/fea_service/wasm_modules/crates/preprocessor/: Cargo.toml
frontend/fea_service/wasm_modules/crates/preprocessor/docs/: objects_description.md
frontend/fea_service/wasm_modules/crates/preprocessor/src/: functions.rs  lib.rs  methods_for_beam_section_data_handle.rs  methods_for_beam_section_orientation_handle.rs  methods_for_concentrated_load_data_handle.rs  methods_for_line_data_handle.rs  methods_for_material_data_handle.rs  methods_for_plate_section_data_handle.rs  methods_for_point_boundary_conditions_data_handle.rs  methods_for_point_data_handle.rs  methods_for_property_data_handle.rs  methods_for_surface_data_handle.rs  methods_for_truss_section_data_handle.rs
frontend/fea_service/wasm_modules/crates/preprocessor/src/enums/: cross_section.rs  mesh_seed.rs  notification_type.rs
frontend/fea_service/wasm_modules/crates/preprocessor/src/structs/: beam_section.rs  concentrated_load.rs  local_axis_1_direction.rs  material.rs  point.rs  point_boundary_condition.rs  property.rs  surface.rs  truss_section.rs  uniformly_distributed_line_load.rs
frontend/fea_service/wasm_modules/crates/preprocessor/src/traits/: child_trait.rs  mesh_seed_trait.rs  mod.rs  property_trait.rs  relative_trait.rs  server_notification_trait.rs  status_trait.rs
frontend/fea_service/wasm_modules/crates/renderer/: Cargo.toml
frontend/fea_service/wasm_modules/crates/renderer/src/: lib.rs  methods_for_converting_elements_data.rs  methods_for_converting_nodes_data.rs  methods_for_drawing_cs_axes.rs  methods_for_drawing_scene.rs  methods_for_manipulation.rs  methods_for_scene_objects_data_handle.rs  props.rs
frontend/fea_service/wasm_modules/crates/solver/: Cargo.toml
frontend/fea_service/wasm_modules/crates/solver/src/: lib.rs  methods_for_bc_data_handle.rs  methods_for_beam_elements_data_handle.rs  methods_for_nodes_data_handle.rs  methods_for_plate_elements_data_handle.rs  methods_for_truss_elements_data_handle.rs  webgpu.rs
frontend/fea_service/wasm_modules/mesher/: Cargo.toml
frontend/fea_service/wasm_modules/mesher/src/: functions.rs  methods_for_nodes_data_handle.rs  methods_for_plate_elements_data_handle.rs  methods_for_point_boundary_conditions_data_handle.rs  methods_for_truss_elements_data_handle.rs  props.rs
frontend/fea_service/wasm_modules/mesher/src/enums/: global_dof_parameter.rs
frontend/fea_service/wasm_modules/preprocessor/: Cargo.toml
frontend/fea_service/wasm_modules/preprocessor/src/: methods_for_beam_section_data_handle.rs  methods_for_beam_section_orientation_handle.rs  methods_for_concentrated_load_data_handle.rs  methods_for_line_data_handle.rs  methods_for_mesh_seed_data_handle.rs  methods_for_plate_section_data_handle.rs  methods_for_point_data_handle.rs  methods_for_surface_data_handle.rs  props.rs
frontend/fea_service/wasm_modules/preprocessor/src/enums/: mod.rs  parent_key.rs  relative_key.rs  status.rs
frontend/fea_service/wasm_modules/preprocessor/src/structs/: extended_property.rs  line.rs  mod.rs  normal.rs  plate_section.rs  uniformly_distributed_surface_load.rs
frontend/fea_service/wasm_modules/renderer/: Cargo.toml
frontend/fea_service/wasm_modules/renderer/docs/: objects_description.md
frontend/fea_service/wasm_modules/renderer/src/: lib.rs  methods_for_associating_buffers_with_shader_programs.rs  methods_for_drawing_scene.rs  methods_for_plotting_result.rs  methods_for_scene_objects_data_handle.rs
frontend/fea_service/wasm_modules/renderer/src/enums/: line_object_type.rs  mesh_seed_type.rs  result_plot.rs  surface_object_type.rs
frontend/fea_service/wasm_modules/renderer/src/functions/: cs_axes.rs  geometric_figures.rs  mod.rs
frontend/fea_service/wasm_modules/renderer/src/structs/: beam_element_data.rs  bounding_box.rs  denotation.rs  extreme_elements_analysis_values.rs  extreme_global_analysis_values.rs  manipulation.rs  plate_element_data.rs  shader_programs.rs  truss_element_data.rs
frontend/fea_service/wasm_modules/renderer/src/traits/: denotation_trait.rs  mod.rs  quad_element_data_trait.rs  selected_object_trait.rs
frontend/fea_service/wasm_modules/solver/: Cargo.toml
frontend/fea_service/wasm_modules/solver/src/: enums.rs  lib.rs  methods_for_nodes_data_handle.rs  methods_for_plate_elements_data_handle.rs  methods_for_truss_elements_data_handle.rs  webgpu.rs
frontend/fea_service/wasm_modules/solver/src/enums/: bc_type.rs
frontend/fea_service/wasm_modules/solver/src/webgpu/: block_jacobi.rs  block_jacobi_exec.rs  buffers.rs  ctx.rs  dot_partials.rs  pcg_update_scalars.rs  pcg_update_scalars_exec.rs  spmv.rs  spmv_exec.rs  vec_ops.rs
(+196 files in other folders)
