[package]
name = "actions_router"
version = "0.9.5"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2024"

[profile.release]
lto = true
opt-level = 3


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
wasm-bindgen-futures = "0.4.56"
serde_derive = "1.0.228"
rand = "0.8.5"
getrandom = { version = "0.2.16", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
