[package]
name = "renderer"
version = "0.9.5"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2024"

[profile.release]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
extended_matrix = "0.9.8"

wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
mat4 = "0.2.1"
vec4 = "0.2.1"
rand = "0.8.5"
getrandom = { version = "0.2.16", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.83"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "Window",
    "WebGlUniformLocation",
    "CanvasRenderingContext2d",
    "CustomEvent",
    "CustomEventInit",
    "EventTarget",
    "CanvasGradient",
    "WebGlContextAttributes",
]
