[package]
name = "solver"
version = "0.9.5"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2024"

[profile.release]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
finite_element_method = "0.9.11"
extended_matrix = "0.9.8"
iterative_solvers_smpl = "0.1.4"

wasm-bindgen = "0.2.106"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
js-sys = "0.3.83"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuBuffer",
    "gpu_buffer_usage",
    "GpuBufferDescriptor",
    "gpu_map_mode",
    "gpu_shader_stage",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuPipelineLayoutDescriptor",
    "GpuPipelineLayout",
    "GpuProgrammableStage",
    "GpuShaderModuleDescriptor",
    "GpuShaderModule",
    "GpuBufferBinding",
    "GpuComputePassDescriptor",
    "GpuCommandEncoder",
    "GpuComputePassEncoder",
    "GpuCommandBuffer",
    "WorkerGlobalScope",
    "WorkerNavigator",
] }
