[package]
name = "preprocessor"
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
extended_matrix.workspace = true
finite_element_method.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
getrandom.workspace = true
serde-wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "CustomEvent",
    "CustomEventInit",
    "EventTarget",
]}
