[package]
name = "renderer"
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
extended_matrix.workspace = true
finite_element_method.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
getrandom.workspace = true
serde-wasm-bindgen.workspace = true
mat4.workspace = true
vec4.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "Window",
    "WebGlUniformLocation",
    "CanvasRenderingContext2d",
    "CustomEvent",
    "CustomEventInit",
    "EventTarget",
    "CanvasGradient",
    "WebGlContextAttributes",
]}
