[package]
name = "solver"
edition.workspace = true
authors.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
extended_matrix.workspace = true
finite_element_method.workspace = true
iterative_solvers_smpl.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
getrandom.workspace = true
serde-wasm-bindgen.workspace = true
mat4.workspace = true
vec4.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuBuffer",
    "gpu_buffer_usage",
    "GpuBufferDescriptor",
    "gpu_map_mode",
    "gpu_shader_stage",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuPipelineLayoutDescriptor",
    "GpuPipelineLayout",
    "GpuProgrammableStage",
    "GpuShaderModuleDescriptor",
    "GpuShaderModule",
    "GpuBufferBinding",
    "GpuComputePassDescriptor",
    "GpuCommandEncoder",
    "GpuComputePassEncoder",
    "GpuCommandBuffer",
    "WorkerGlobalScope",
    "WorkerNavigator",
]}
